static/styles/styles.css
/* ... */
.body--modal-open .modal--active,
.body--modal-open .modal__overlay {
  display: block;
}

.body--modal-open .js-open-rules-modal-btn {
  display: none;
}

body.body--modal-open {
  overflow: hidden;
}

.modal__inner {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 30px 50px;
  overflow: auto;
}

.modal__inner--slider {
  overflow: hidden;
  padding: 0;
}

.modal__heading {
  margin-bottom: 20px;
}

.modal__overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 50;
  background: rgba(0, 0, 0, 0.6);
}

.modal__close-btn {
  position: absolute;
  cursor: pointer;
  top: 30px;
  right: 30px;
  padding: 0;
  background-color: transparent;
  border: none;
  background-color: rgba(0, 0, 0, 0.6);
  padding: 10px;
  z-index: 1;
}

.modal__close-btn svg {
  display: block;
  fill: #ffbc00;
  width: 25px;
  height: 25px;
}

@media (max-width: 56.25em) {
  .modal {
    height: auto;
    overflow: auto;
  }

  .modal__inner {
    padding: 30px;
  }

  .modal__inner--slider {
    padding: 0;
  }

  .modal__close-btn {
    top: 0;
    right: 0;
  }
}
.rules {
  position: relative;
  background-color: #e9e9e9;
  color: #071E22;
}

.rules__text {
  float: left;
  width: 50%;
  padding: 38px 40px;
}

.rules__image {
  float: right;
  width: 50%;
  overflow: hidden;
  height: 100%;
  clip-path: polygon(9% 0, 100% 0, 100% 101%, 0 101%);
}

.rules__image img {
  display: block;
}

.rules__image img {
  width: auto;
  min-height: 400px;
}

.rules__heading {
  font-weight: 800;
  margin-bottom: 26px;
}

.rules__btn {
  position: fixed;
  bottom: 30px;
  left: 30px;
  padding: 12px 18px;
  z-index: 100;
  background: #071E22;
  color: #ffffff;
  border: none;
  cursor: pointer;
  box-shadow: 2px 2px 8px 0px black;
}

.rules__btn--close {
  position: absolute;
  top: 30px;
  right: 30px;
  bottom: auto;
  left: auto;
}

.rules__close-btn svg {
  fill: #ffbc00;
}

@media (max-width: 56.25em) {
  .rules__text,
.rules__image {
    width: 100%;
    clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
  }

  .rules__text {
    padding: 34px 24px 8px 34px;
  }

  .rules__image img {
    width: 100%;
    min-height: auto;
  }
}
.button {
  background-color: #ffbc00;
  display: inline-block;
  padding: 10px 15px;
  font-size: 20px;
  border-radius: 0;
  -webkit-appearance: none;
  border: 1px solid transparent;
  min-height: 45px;
}

.button--refresh {
  background-image: url(../images/refresh.svg);
  background-repeat: no-repeat;
  background-position: center;
  background-color: #002642;
  padding: 10px 25px;
}

.buttons-row .button {
  float: left;
}

.buttons-row .button:not(:last-child) {
  margin-right: 20px;
}

.button:hover {
  cursor: pointer;
}

.notice {
  margin-top: 15px;
  padding: 20px 30px;
  border: 1px solid #e8d600;
  background: #443400;
  margin-bottom: 26px;
}

.notice--error {
  border: 1px solid #e80000;
  background: #1a0000;
}

.room-list {
  margin-top: 20px;
  margin-bottom: 20px;
}

.room-list table {
  width: 100%;
  text-align: left;
  border-collapse: collapse;
}

.room-list thead {
  border-bottom: 1px solid #ffffff;
}

.room-list a {
  color: #ffffff;
  text-decoration: none;
}

.scoreboard {
  min-height: 140px;
  font-family: "Pirata One", cursive;
  margin-bottom: 20px;
}

.scoreboard--active-player .js-scoreboard-player {
  animation-duration: 1.5s;
  animation-name: pulseGreen;
  animation-iteration-count: infinite;
}

.scoreboard--active-opponent .js-scoreboard-opponent {
  animation-duration: 1.5s;
  animation-name: pulseRed;
  animation-iteration-count: infinite;
}

.scoreboard__player {
  position: relative;
  background-color: #071E22;
  text-transform: uppercase;
  border-top: 16px solid #56ff00;
  color: #56ff00;
  height: 70px;
  background-color: #071E22;
}

.scoreboard__player--opponent {
  border-color: #FF0054;
  color: #FF0054;
}

.scoreboard__player--active-opponent {
  animation-duration: 1.5s;
  animation-name: pulseRedText;
  animation-iteration-count: infinite;
}

.scoreboard__name {
  float: left;
  margin-left: 25px;
  font-size: 32px;
  height: 100%;
}

.scoreboard__score-container {
  float: right;
  position: relative;
  background-color: #e9e9e9;
  font-size: 46px;
  text-align: center;
  width: 62px;
  color: #071E22;
  height: 100%;
}

.scoreboard__score {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.single-row-form__input {
  color: #ffffff;
  background-color: #002642;
  display: inline-block;
  padding: 10px 15px;
  font-size: 20px;
  border-radius: 0;
  -webkit-appearance: none;
  border: 1px solid transparent;
  max-width: 100%;
}

@media (max-width: 37.5em) {
  .single-row-form__input {
    width: 100%;
  }

  .single-row-form .button {
    width: 100%;
  }
}
.logo-container {
  position: relative;
}

.logo-container__logo {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.flexslider ol,
.flexslider ul {
  list-style: none;
}

.flex-control-nav {
  position: fixed;
  left: 37px;
  bottom: 57px;
}

.flex-control-nav li {
  display: inline-block;
}

.flex-control-nav li:not(:last-child) {
  margin-right: 12px;
}

.flex-control-nav a {
  display: block;
  text-decoration: none;
  text-align: center;
  width: 40px;
  padding: 7px;
  border: 1px solid #071E22;
  background-color: #e9e9e9;
  color: #071E22;
}

.flex-control-nav a.flex-active {
  background-color: #071E22;
  color: #e9e9e9;
}

@media (max-width: 56.25em) {
  .flex-control-nav {
    position: absolute;
    background: rgba(0, 0, 0, 0.6);
    padding: 20px;
    bottom: 0;
    left: 0;
    width: 100%;
    text-align: center;
  }
}

/*# sourceMappingURL=styles.css.map */

